add scroll infinite podcast pages and fix sonar issues